# asdb-vtabwrapper

./: CMakeLists.txt  LICENSE.txt  README.md
example/: asdb_newapi.h  engtext.c  engtext.h  new-engtext.c  newerwrapper.c  newerwrapper.h  weather.c  weather.h
include/: ASDBConfig.h.in  asdb.h
mock/: CMakeLists.txt  dummy_adapter.c
src/: CMakeLists.txt  array.c  array.h  array_type.h  asdb.c  asdb_data.h
test/: CMakeLists.txt  dummy.cpp  idx_test.cpp  run_all_test.cpp
